# release-registry

./: .gitignore  CALENDAR.md  CLAUDE.md  Justfile  README.md  ical.py  json-to-md.py  manage.py  releases-v1.ics  releases-v1.json  releases-v1.schema.json  requirements.txt  state.json  update-badges.py  update-readme.py
.github/workflows/: new-release.yml  plan-release.yml  skip-release.yml  tracker.yml  update-files.yml  update-readme.yml
scripts/: manage.py  requirements.txt  update-badges.py  update-calendar.py  update-gantt.py  update-project-board.py  update-readme.py
tracker/: Cargo.toml  README.md  SPECS.md  bootstrap.sh  state.json
tracker/src/: downstream.rs  github.rs  lib.rs  main.rs  onchain.rs  project.rs  releases.rs  state.rs
tracker/tests/: live_integration.rs  unit_tests.rs
tracker/tests/fixtures/: cargo-toml-sample.toml  lib-rs-sample.rs  releases-v1-sample.json  state-sample.json
