[package]
name = "tracker"
description = "PR Deployment Tracker for polkadot-sdk releases"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
subxt = "0.50"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
