[package]
name = "tracker"
description = "PR Deployment Tracker for polkadot-sdk releases"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
cargo-lock = "10"
cargo_toml = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
subxt = "0.50"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
